--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,26 @@
 *, *::before, *::after { box-sizing: border-box; }
 body { 
-    font-family: 'Kumbh Sans', sans-serif;
+    font-family: 'Inter', sans-serif;
     margin: 0; 
     background-color:black; 
     color: white; 
+
 }
 main { 
-    background-color: hsl(0, 0%, 8%); 
-    max-width: 350px; 
-    margin: 50px auto; 
-    padding: 30px; 
-    text-align: center; 
-    font-size: 16px;
-    font-weight: 400;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
 img { 
-    width: 100px; 
-    height: 100px; 
+    display: block;
+    margin: auto;
+
     border-radius: 50%; 
-    margin-bottom: 20px; 
+    padding: 20px;
 }
 h1 { 
     margin: 0 0 10px; 
@@ -28,8 +30,11 @@ container{
     display:grid;
     grid-template-columns: 1fr;
     gap: 10px;
-    margin-top: 50px;
+    padding: 20px;
+    background-color: hsl(0, 0%, 8%); 
+    text-align: center;
 }
+
 button {
     background-color: hsl(0, 0%, 20%);
     color:white;
@@ -41,6 +46,9 @@ button {
 }
 button:hover {
     background-color: hsl(75, 94%, 57%);
+}
+.notes{
+    font-size: 14px
 }
 .location { 
     font-size: 14px; 
