--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
 
 }
 main { 
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +17,7 @@ main {
 img { 
     display: block;
     margin: auto;
-
+    width: 150px;
     border-radius: 50%; 
     padding: 20px;
 }
@@ -31,7 +30,7 @@ container{
     grid-template-columns: 1fr;
     gap: 10px;
     padding: 20px;
-    background-color: hsl(0, 0%, 8%); 
+    background-color: hsl(0, 0%, 12%); 
     text-align: center;
 }
 
